Update to angular 11.2.0

--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "alexPortfolio": {
+    "myPortfolio": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/alexPortfolio",
+            "outputPath": "dist/myPortfolio",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -67,18 +67,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "alexPortfolio:build"
+            "browserTarget": "myPortfolio:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "alexPortfolio:build:production"
+              "browserTarget": "myPortfolio:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "alexPortfolio:build"
+            "browserTarget": "myPortfolio:build"
           }
         },
         "test": {
@@ -121,16 +121,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "alexPortfolio:serve"
+            "devServerTarget": "myPortfolio:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "alexPortfolio:serve:production"
+              "devServerTarget": "myPortfolio:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "alexPortfolio"
+  "defaultProject": "myPortfolio"
 }
